Fixed some contrast issues

--- a/common/common.scss
+++ b/common/common.scss
@@ -2161,7 +2161,8 @@ html.dark .admin-customize .field-error,
 html.dark .user-menu .notifications li:hover,
 html.dark .menu-panel li a:hover,
 html.dark .select-kit.combo-box .select-kit-row,
-html.dark .menu-panel li a:focus {
+html.dark .menu-panel li a:focus,
+html.dark .modal.history-modal span.edit-reason {
 	background-color: #1f353e;
 }
 
@@ -2575,7 +2576,7 @@ html.dark .admin-flags .message {
 }
 
 html.dark .user-menu .notifications li {
-	background-color: #019494;
+    background-color: #006f6f;
 }
 
 html.dark .theme,
